infra/kubernetes/opa-policies/templates.yaml
################################################
######## Force to have project-label
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requiredlabels
spec:
  crd:
    spec:
      names:
        kind: RequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requiredlabels

        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("you must provide labels: %v", [missing])
        }


---

#########################################################
######## Trust in AWS ECR registry only for workloads 

apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: trustregistry
spec:
  crd:
    spec:
      names:
        kind: TrustRegistry
      validation:
        openAPIV3Schema:
          type: object
          properties:
            registry:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package trustregistry 

        import future.keywords

        violation[{"msg": msg, "details": {"images MUST come from trusted registry"}}] {
              some container in input.review.object.spec.containers
              not startswith(container.image, input.parameters.registry)
              msg := sprintf("Image '%v' comes from untrusted registry", [container.image])
  
        }
